syntax = "proto3";

package entropic.dna.v1;

option go_package = "github.com/entropic-engine/entropic-dna-api/gen/proto/entropic/dna/v1;dnav1";

import "google/api/annotations.proto";
import "entropic/dna/v1/messages.proto";

// GameDNA Service - Primary API for managing game configurations
service GameDNAService {
  // Create a new game configuration
  rpc CreateGameDNA(CreateGameDNARequest) returns (GameDNAResponse) {
    option (google.api.http) = {
      post: "/api/v1/game-dna"
      body: "*"
    };
  }
  
  // Get a game configuration by ID
  rpc GetGameDNA(GetGameDNARequest) returns (GameDNAResponse) {
    option (google.api.http) = {
      get: "/api/v1/game-dna/{id}"
    };
  }
  
  // List all game configurations with pagination
  rpc ListGameDNA(ListGameDNARequest) returns (ListGameDNAResponse) {
    option (google.api.http) = {
      get: "/api/v1/game-dna"
    };
  }
  
  // Update an existing game configuration
  rpc UpdateGameDNA(UpdateGameDNARequest) returns (GameDNAResponse) {
    option (google.api.http) = {
      put: "/api/v1/game-dna/{id}"
      body: "*"
    };
  }
  
  // Delete a game configuration
  rpc DeleteGameDNA(DeleteGameDNARequest) returns (DeleteGameDNAResponse) {
    option (google.api.http) = {
      delete: "/api/v1/game-dna/{id}"
    };
  }
  
  // Validate a game configuration without saving
  rpc ValidateGameDNA(ValidateGameDNARequest) returns (ValidationResponse) {
    option (google.api.http) = {
      post: "/api/v1/game-dna/{id}/validate"
      body: "*"
    };
  }
  
  // Publish (lock) a game configuration
  rpc PublishGameDNA(PublishGameDNARequest) returns (PublishedGameDNAResponse) {
    option (google.api.http) = {
      post: "/api/v1/game-dna/{id}/publish"
      body: "*"
    };
  }
  
  // Get version history for a game configuration
  rpc GetVersionHistory(GetVersionHistoryRequest) returns (VersionHistoryResponse) {
    option (google.api.http) = {
      get: "/api/v1/game-dna/{config_id}/versions"
    };
  }
  
  // Rollback to a previous version
  rpc RollbackToVersion(RollbackToVersionRequest) returns (GameDNAResponse) {
    option (google.api.http) = {
      post: "/api/v1/game-dna/{config_id}/rollback"
      body: "*"
    };
  }
  
  // Clone an existing configuration
  rpc CloneGameDNA(CloneGameDNARequest) returns (GameDNAResponse) {
    option (google.api.http) = {
      post: "/api/v1/game-dna/{id}/clone"
      body: "*"
    };
  }
}

// Request/Response messages

message CreateGameDNARequest {
  GameDNA game_dna = 1;
}

message GetGameDNARequest {
  string id = 1;
}

message ListGameDNARequest {
  int32 page = 1;
  int32 page_size = 2;
  repeated string tags = 3;
  string genre = 4;
  string name_filter = 5;
}

message UpdateGameDNARequest {
  string id = 1;
  GameDNA game_dna = 2;
}

message DeleteGameDNARequest {
  string id = 1;
}

message ValidateGameDNARequest {
  // Optional config ID. If provided and game_dna is empty, the server validates the stored config.
  string id = 1;
  GameDNA game_dna = 2;
}

message PublishGameDNARequest {
  string id = 1;
}

message GetVersionHistoryRequest {
  string config_id = 1;
}

message RollbackToVersionRequest {
  string config_id = 1;
  int64 version_num = 2;
}

message CloneGameDNARequest {
  string id = 1;
  string new_name = 2;
}

// Response messages

message GameDNAResponse {
  GameDNA game_dna = 1;
  string message = 2;
}

message ListGameDNAResponse {
  repeated GameDNA items = 1;
  PaginationInfo pagination = 2;
}

message DeleteGameDNAResponse {
  bool success = 1;
  string message = 2;
}

message PublishedGameDNAResponse {
  GameDNA game_dna = 1;
  string checksum = 2;
  string message = 3;
}

message VersionHistoryResponse {
  repeated VersionInfo versions = 1;
}
